se actualizan las rutas de las imagenes y se agrega el favicon

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./Img/Logo.png" type="image/x-icon">
     <title>Alura - Encriptador</title>
 </head>
 
 <body>
     <header id="header" class="header">
-        <img src="/Img/Logo.png" alt="logo_alura" class="img">
+        <img src="./Img/Logo.png" alt="logo_alura" class="img">
     </header>
 
     <main id="main" class="main">
@@ -26,7 +27,7 @@
         </section>
         <section class="resultado" id="resultado">
             <div id="muñeco">
-                <img src="/Img/Muñeco.png" alt="Muñeco">
+                <img src="./Img/Muñeco.png" alt="Muñeco">
                 <h2>
                     Ningun mensaje fue encontrado
                 </h2>
